feat(lab03): завершить отчет по настройке DHCP-сервера

--- a/labs/lab03/report/net-os-admin--lab03--report.qmd
+++ b/labs/lab03/report/net-os-admin--lab03--report.qmd
@@ -1,67 +1,290 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №3"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка DHCP-сервера"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков по установке и конфигурированию DHCP-сервера
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+1. Установите на виртуальной машине server DHCP-сервер (см. раздел 3.4.1).
+2. Настройте виртуальную машину server в качестве DHCP-сервера для виртуальной
+внутренней сети (см. раздел 3.4.2).
+3. Проверьте корректность работы DHCP-сервера в виртуальной внутренней сети
+путём запуска виртуальной машины client и применения соответствующих утилит
+диагностики (см. раздел 3.4.3).
+4. Настройте обновление DNS-зоны при появлении в виртуальной внутренней сети
+новых узлов (см. раздел 3.4.4).
+5. Проверьте корректность работы DHCP-сервера и обновления DNS-зоны в виртуаль-
+ной внутренней сети путём запуска виртуальной машины client и применения
+соответствующих утилит диагностики (см. раздел 3.4.5).
+6. Напишите скрипт для Vagrant, фиксирующий действия по установке и настройке
+DHCP-сервера во внутреннем окружении виртуальной машины server. Соответ-
+ствующим образом внести изменения в Vagrantfile (см. раздел 3.4.6)
 
-# Теоретическое введение
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Установка DHCP-сервера
+1. Загрузите вашу операционную систему и перейдите в рабочий каталог с проектом:
+cd /var/tmp/user_name/vagrant  
+![](image/Screenshot_1.jpg){fig-align="center" width=70%}
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+2. Запустите виртуальную машину server: vagrant up server  
+![](image/Screenshot_2.jpg){fig-align="center" width=70%}
+
+3. На виртуальной машине server войдите под вашим пользователем и откройте тер-
+минал. Перейдите в режим суперпользовател 
+![](image/Screenshot_3.jpg){fig-align="center" width=70%}
+
+4. Установите dhcp: 
+![](image/Screenshot_4.jpg){fig-align="center" width=70%}
+
+## Конфигурирование DHCP-сервера
+1. Сохраните на всякий случай конфигурационный файл:
+cp /etc/kea/kea-dhcp4.conf /etc/kea/kea-dhcp4.conf__$(date -I)
+
+
+2. Откройте файл /etc/kea/kea-dhcp4.conf на редактирование. В этом файле:
+– замените шаблон для domain-name
+
+
+– на базе одного из приведённых в файле примеров конфигурирования подсети
+задайте собственную конфигурацию dhcp-сети, задав адрес подсети, диапазон
+адресов для распределения клиентам, адрес маршрутизатора и broadcast-адрес:
+
+
+3. Настройте привязку dhcpd к интерфейсу eth1 виртуальной машины server:
+![](image/Screenshot_6.jpg){fig-align="center" width=70%}
+
+4. Проверьте правильность конфигурационного файла:
+![](image/Screenshot_7.jpg){fig-align="center" width=70%}
+
+5. Перезагрузите конфигурацию dhcpd и разрешите загрузку DHCP-сервера при запуске виртуальной машины server:
+![](image/Screenshot_8.jpg){fig-align="center" width=70%}
+
+6. Добавьте запись для DHCP-сервера в конце файла прямой DNS-зоны
+/var/named/master/fz/user.net:
+dhcp A 192.168.1.1
+и в конце файла обратной зоны /var/named/master/rz/192.168.1:
+1 PTR dhcp.user.net.
+![](image/Screenshot_9.jpg){fig-align="center" width=70%}
+
+7. Перезапустите named:
+![](image/Screenshot_10.jpg){fig-align="center" width=70%}
+
+8. Проверьте, что можно обратиться к DHCP-серверу по имени:
+ping dhcp.user.net
+![](image/Screenshot_11.jpg){fig-align="center" width=70%}
+
+9. Внесите изменения в настройки межсетевого экрана узла server, разрешив работу
+с DHCP:
+![](image/Screenshot_12.jpg){fig-align="center" width=70%}
+
+10. Восстановите контекст безопасности в SELinux:
+![](image/Screenshot_13.jpg){fig-align="center" width=70%}
+
+11. В дополнительном терминале запустите мониторинг происходящих в системе процессов в реальном времени:
+![](image/Screenshot_14.jpg){fig-align="center" width=70%}
+
+12. В основном рабочем терминале запустите DHCP-сервер:
+ 
+
+
+## Анализ работы DHCP-сервера
+1. Перед запуском виртуальной машины client в каталоге с проектом в вашей операционной системе в подкаталоге vagrant/provision/client создайте файл 01-routing.sh:
+![](image/Screenshot_15.jpg){fig-align="center" width=70%}
+
+
+2. В Vagrantfile подключите этот скрипт в разделе конфигурации для клиента:
+
+
+3. Зафиксируйте внесённые изменения для внутренних настроек виртуальной машины client и запустите её, введя в терминале:
+![](image/Screenshot_16.jpg){fig-align="center" width=70%}
+
+
+4. После загрузки виртуальной машины client вы можете увидеть на виртуальной
+машине server на терминале с мониторингом происходящих в системе процессов
+записи о подключении к виртуальной внутренней сети узла client и выдачи ему
+IP-адреса из соответствующего диапазона адресов. 
+![](image/Screenshot_17.jpg){fig-align="center" width=70%}
+
+
+5. Войдите в систему виртуальной машины client под вашим пользователем и откройте терминал. В терминале введите
+ifconfig
+ 
+
+
+6. На машине server посмотрите список выданных адресов:
+![](image/Screenshot_18.jpg){fig-align="center" width=70%}
+
+
+## Настройка обновления DNS-зоны
+1. Создадим ключ на сервере с Bind9 (на виртуальной машине server):
+
+
+
+2. Файл /etc/named/keys/dhcp_updater.key будет иметь следующий вид:
+![](image/Screenshot_20.jpg){fig-align="center" width=70%}
+
+
+3. Поправим права доступа:
+![](image/Screenshot_21.jpg){fig-align="center" width=70%}
+
+
+4. Подключим ключ в файле /etc/named.conf:
+![](image/Screenshot_22.jpg){fig-align="center" width=70%}
+
+
+5. На виртуальной машине server под пользователем с правами суперпользователя отредактируйте файл /etc/named/user.net 
+![](image/Screenshot_23.jpg){fig-align="center" width=70%}
+
+
+6. Сделаем проверку конфигурационного файла:
+
+
+7. Перезапустите DNS-сервер:
+![](image/Screenshot_24.jpg){fig-align="center" width=70%}
+
+
+8. Сформируем ключ для Kea. 
+![](image/Screenshot_25.jpg){fig-align="center" width=70%}
+
+
+9. Перенесём ключ на сервер Kea DHCP и перепишем его в формате json
+![](image/Screenshot_26.jpg){fig-align="center" width=70%}
+
+
+10. Сменим владельца:
+![](image/Screenshot_27.jpg){fig-align="center" width=70%}
+
+
+11. Поправим права доступа:
+![](image/Screenshot_28.jpg){fig-align="center" width=70%}
+
+
+12. Настройка происходит в файле /etc/kea/kea-dhcp-ddns.conf:
+![](image/Screenshot_29.jpg){fig-align="center" width=70%}
+
+
+13. Изменим владельца файла:
+![](image/Screenshot_30.jpg){fig-align="center" width=70%}
+
+
+14. Проверим файл на наличие возможных синтаксических ошибок:
+![](image/Screenshot_31.jpg){fig-align="center" width=70%}
+
+
+15. Запустим службу ddns:
+![](image/Screenshot_32.jpg){fig-align="center" width=70%}
+
+
+16. Проверим статус работы службы:
+
+
+
+17. Внесите изменения в конфигурационный файл /etc/kea/kea-dhcp4.conf, добавив
+в него разрешение на динамическое обновление DNS-записей с локального узла
+прямой и обратной зон:
+![](image/Screenshot_33.jpg){fig-align="center" width=70%}
+
+
+18. Проверим файл на наличие возможных синтаксических ошибок:
+
+
+
+19. Перезапустите DHCP-сервер:
+![](image/Screenshot_34.jpg){fig-align="center" width=70%}
+
+
+20. Проверим статус:
+![](image/Screenshot_35.jpg){fig-align="center" width=70%}
+
+
+21. На машине client переполучите адрес:
+![](image/Screenshot_36.jpg){fig-align="center" width=70%}
+
+
+## Анализ работы DHCP-сервера после настройки обновления DNS-зоны
+
+1. На виртуальной машине client под вашим пользователем откройте терминал и с по-
+мощью утилиты dig убедитесь в наличии DNS-записи о клиенте в прямой DNS-зоне:
+ 
+
+
+## Bнесение изменений в настройки внутреннего окружения виртуальной машины
+1. На виртуальной машине server перейдите в каталог для внесения изменений
+в настройки внутреннего окружения /vagrant/provision/server/, создайте в нём
+каталог dhcp, в который поместите в соответствующие подкаталоги конфигураци-
+онные файлы DHCP:
+![](image/Screenshot_38.jpg){fig-align="center" width=70%}
+
+
+2. Замените конфигурационные файлы DNS-сервера:
+![](image/Screenshot_39.jpg){fig-align="center" width=70%}
+
+
+3. В каталоге /vagrant/provision/server создайте исполняемый файл dhcp.sh:
+
+
+Открыв его на редактирование, пропишите в нём следующий скрипт
+ 
+
+
+4. Для отработки созданного скрипта во время загрузки виртуальной машины server
+в конфигурационном файле Vagrantfile необходимо добавить в разделе конфигу-
+рации для сервера
+
+
+
+# Контрольные вопросы
+
+- В каких файлах хранятся настройки сетевых подключений?
+
+/etc/NetworkManager/system-connections/ (управляется через NetworkManager)
+
+- За что отвечает протокол DHCP?
+
+DHCP (Dynamic Host Configuration Protocol) отвечает за автоматическую выдачу клиентам сетевых настроек: IP-адреса, маски подсети, шлюза по умолчанию и адресов DNS-серверов.
+
+- Поясните принцип работы протокола DHCP. Какими сообщениями обмениваются клиент и сервер, используя протокол DHCP?
+
+Он выделяет каждому компьютеру произвольный свободный IP-адрес из определённого администратором диапазона
+
+- В каких файлах обычно находятся настройки DHCP-сервера? За что отвечает каждый из файлов?
+
+/etc/dhcp/dhcpd.conf- содержит все настройки — объявление подсетей, пулы адресов, шлюзы, DNS-серверы, время аренды и т.д.
+
+/var/lib/dhcp/dhcpd.leases - автоматически ведется демоном dhcpd, хранит историю выданных адресов, кому и на какой срок.
+
+
+
+
+- Что такое DDNS? Для чего применяется DDNS?
+
+Это технология, позволяющая автоматически обновлять записи на DNS-сервере в реальном времени
+
+- Какую информацию можно получить, используя утилиту ifconfig? Приведите примеры с использованием различных опций.
+
+Показывает конфигурацию сетевых интерфейсов (IP-адрес, маску, MAC-адрес), статистику по приему/передаче данных (RX/TX).
+
+ifconfig – показать все активные интерфейсы.
+
+ifconfig eth0 – показать информацию только для интерфейса eth0.
+
+ifconfig eth0 up – включить (up) интерфейс eth0.
+
+- Какую информацию можно получить, используя утилиту ping?
+
+Проверяет доступность узла в сети и качество соединения (время отклика, потерю пакетов).
+
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Приобрел практические навыки по установке и конфигурированию DHCP-сервера
 
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
