--- a/labs/lab04/presentation/net-os-admin--lab04--presentation.qmd
+++ b/labs/lab04/presentation/net-os-admin--lab04--presentation.qmd
@@ -1,200 +1,81 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
-date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+  title: "Лабораторная работа №4"
+  subtitle: "Базовая настройка HTTP сервера Apache"
+  author: "Газизянов Владислав Альбертович"
+  license: "CC BY"
+  date: today
+  date format: "YYYY MM DD"
 ---
 
-# Информация
+## Цель работы
 
-## Докладчик
-
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
-
-# Вводная часть
-
-## Актуальность
-
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
-
-## Объект и предмет исследования
-
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
-
-## Цели и задачи
-
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
-
-## Материалы и методы
-
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
-
-# Создание презентации
-
-## Процессор `pandoc`
-
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
-
-## Формат `pdf`
-
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
-
-## Код для формата `pdf`
-
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
-
-## Формат `html`
-
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
-
-## Код для формата `html`
-
-- Тема задаётся в файле `Makefile`
-
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
-
-## Получающиеся форматы
-
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
-
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+Приобретение практических навыков по установке и базовому конфигурированию HTTP сервера Apache
 
 
-## Итоговый слайд
+## Задание
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+Установить необходимые пакеты HTTP сервера
+Запустить сервер с базовой конфигурацией
+Настроить виртуальный хостинг
+Создать скрипт автоматизации для Vagrant
 
-# Рекомендую
 
-## Принцип 10/20/30
+## Установка HTTP сервера
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+  Запуск виртуальной машины server
+  Установка пакетов веб сервера
+  Подготовка базовой конфигурации
 
-## Связь слайдов
+![Установка пакетов](image/Screenshot_2.png)
 
-::: incremental
+## Базовое конфигурирование
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+  Анализ конфигурационных файлов Apache
+  Настройка межсетевого экрана для HTTP
+  Активация и запуск службы httpd
+  Проверка работы через системные логи
 
-:::
+![Настройка firewall для HTTP](image/Screenshot_3.png)
 
-## Количество сущностей
+## Анализ работы сервера
 
-::: incremental
+  Запуск виртуальной машины client
+  Мониторинг логов доступа и ошибок
+  Тестирование доступа через браузер
+  Подтверждение работоспособности
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+![Мониторинг логов доступа](image/Screenshot_7.png)
 
-:::
+## Настройка виртуального хостинга
 
-## Общие рекомендации
+  Добавление DNS записей для двух хостов
+  Создание конфигурационных файлов виртуальных хостов
+  Подготовка корневых каталогов и тестовых страниц
+  Настройка прав доступа и SELinux
 
-::: incremental
+![Создание каталогов и тестовых страниц](image/Screenshot_11.png)
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+## Проверка виртуального хостинга
 
-:::
+  Перезапуск HTTP сервера
+  Тестирование доступности обоих доменов
+  Проверка корректности отображения контента
+  Верификация работы DNS разрешения
 
-## Представление данных
+![Тестирование доменов](image/Screenshot_14.png)
 
-::: incremental
+## Автоматизация развёртывания
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+  Копирование конфигурационных файлов
+  Создание shell скрипта для автоматизации
+  Интеграция скрипта в Vagrantfile
+  Настройка провижининга виртуальной машины
 
-:::
+![Скрипт автоматизации](image/Screenshot_16.png)
+
+## Выводы
+
+  Освоена установка и базовая настройка Apache
+  Настроен виртуальный хостинг для нескольких доменов
+  Реализована автоматизация процесса развёртывания
+  Приобретены практические навыки администрирования веб сервера
