--- a/labs/lab05/presentation/net-os-admin--lab05--presentation.qmd
+++ b/labs/lab05/presentation/net-os-admin--lab05--presentation.qmd
@@ -1,200 +1,114 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №5"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Расширенная настройка HTTP-сервера Apache"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение практических навыков по расширенному конфигурированию HTTP-сервера Apache
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настройка HTTPS с самоподписанным сертификатом
+- Интеграция поддержки PHP
+- Автоматизация развёртывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Настройка HTTPS
 
-:::
-::: {.column width="30%"}
+**Генерация SSL сертификата:**
+- Создание криптографических ключей
+- Использование OpenSSL для генерации сертификата
+- Настройка параметров сертификата
 
-![](./image/kulyabov.jpg)
+![Генерация SSL сертификата](image/Screenshot_2.png){width=70%}
 
-:::
-::::::::::::::
+# Конфигурация виртуального хоста
 
-# Вводная часть
+**Настройка Apache для HTTPS:**
+- Конфигурация виртуального хоста на порту 443
+- Настройка автоматического перенаправления с HTTP на HTTPS
+- Указание путей к SSL сертификату и ключу
 
-## Актуальность
+![Настройка конфигурации HTTPS](image/Screenshot_3.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Настройка firewall
 
-## Объект и предмет исследования
+**Открытие портов для HTTPS:**
+- Добавление службы https в firewall
+- Настройка постоянных правил
+- Перезагрузка правил межсетевого экрана
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Настройка firewall для HTTPS](image/Screenshot_4.png){width=70%}
 
-## Цели и задачи
+# Проверка HTTPS
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Тестирование защищённого соединения:**
+- Проверка автоматического перенаправления
+- Анализ сертификата безопасности
+- Подтверждение работы по протоколу HTTPS
 
-## Материалы и методы
+![Проверка HTTPS соединения](image/Screenshot_5.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Установка PHP
 
-# Создание презентации
+**Интеграция PHP с Apache:**
+- Установка пакетов PHP
+- Настройка взаимодействия с веб-сервером
+- Подготовка к выполнению PHP-скриптов
 
-## Процессор `pandoc`
+![Установка PHP](image/Screenshot_6.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Создание PHP-файла
 
-## Формат `pdf`
+**Тестирование работы PHP:**
+- Создание тестового PHP-файла
+- Использование функции phpinfo()
+- Замена HTML-контента на PHP-скрипты
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Создание тестового PHP-файла](image/Screenshot_7.png){width=70%}
 
-## Код для формата `pdf`
+# Настройка прав доступа
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Управление разрешениями:**
+- Настройка прав доступа для пользователя apache
+- Восстановление контекстов SELinux
+- Обеспечение безопасности веб-контента
 
-## Формат `html`
+![Настройка прав доступа](image/Screenshot_8.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Проверка PHP
 
-## Код для формата `html`
+**Верификация работы интерпретатора:**
+- Проверка отображения PHP-страницы
+- Анализ информации о версии PHP
+- Подтверждение корректной работы
 
-- Тема задаётся в файле `Makefile`
+![Проверка работы PHP](image/Screenshot_9.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Копирование конфигурации
 
-## Получающиеся форматы
+**Сохранение настроек:**
+- Копирование SSL сертификатов и ключей
+- Сохранение конфигурационных файлов
+- Подготовка к автоматическому развёртыванию
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Копирование конфигурационных файлов](image/Screenshot_10.png){width=70%}
 
-# Элементы презентации
+# Автоматизация развёртывания
 
-## Актуальность
+**Обновление скрипта Vagrant:**
+- Добавление установки PHP в скрипт
+- Настройка поддержки HTTPS
+- Интеграция с процессом провижининга
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![Обновление скрипта автоматизации](image/Screenshot_11.png){width=70%}
 
-## Цели и задачи
+# Выводы
 
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+ Освоена настройка HTTPS с самоподписанным сертификатом
+ Настроена поддержка выполнения PHP-скриптов
+ Реализована автоматизация процесса развёртывания
+ Приобретены навыки обеспечения безопасности веб-сервера
