--- a/labs/lab06/report/net-os-admin--lab06--report.qmd
+++ b/labs/lab06/report/net-os-admin--lab06--report.qmd
@@ -1,67 +1,127 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №6"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Установка и настройка системы управления базами данных MariaDB"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков по установке и конфигурированию системы управления базами данных на примере программного обеспечения MariaDB.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить необходимые для работы MariaDB пакеты.
+2. Настроить в качестве кодировки символов по умолчанию utf8 в базах данных.
+3. Создать тестовую базу данных addressbook с таблицей city.
+4. Создать резервную копию базы данных и восстановить из неё данные.
+5. Написать скрипт для Vagrant, фиксирующий действия по установке и настройке MariaDB.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Установка MariaDB
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+Была запущена виртуальная машина server и выполнена установка пакетов MariaDB, включая сервер базы данных и клиентские утилиты.
+
+![Установка MariaDB](image/1.png)
+
+Проведён анализ конфигурационных файлов в каталогах /etc/my.cnf.d и /etc/my.cnf для понимания структуры настроек сервера баз данных.
+
+![Просмотр конфигурационных файлов](image/2.png)
+
+Запущена и активирована служба mariadb, после чего проверена её работа через анализ прослушиваемых портов.
+
+![Запуск службы MariaDB](image/3.png)
+
+Выполнена начальная настройка безопасности базы данных с использованием утилиты mysql_secure_installation, включая установку пароля root и удаление тестовых данных.
+
+![Настройка безопасности MariaDB](image/4.png)
+
+Проведён вход в интерактивную оболочку MariaDB и выполнен просмотр списка системных баз данных, доступных по умолчанию.
+
+![Просмотр системных баз данных](image/5.png)
+
+## Конфигурация кодировки символов
+
+Создан конфигурационный файл для установки кодировки UTF-8 в качестве стандартной для всех операций с базой данных.
+
+![Создание конфигурации UTF-8](image/6.png)
+
+Проведена проверка статуса MariaDB до и после применения изменений для подтверждения корректности настройки кодировки.
+
+![Проверка статуса MariaDB](image/7.png)
+
+## Создание базы данных
+
+Создана тестовая база данных addressbook с указанием кодировки UTF-8 и правил сортировки.
+
+![Создание базы данных addressbook](image/8.png)
+
+В базе данных создана таблица city с полями для хранения имени и города, после чего таблица заполнена тестовыми данными.
+
+![Создание и заполнение таблицы city](image/9.png)
+
+Создан пользователь базы данных с ограниченными правами доступа и предоставлены ему привилегии для работы с базой addressbook.
+
+![Создание пользователя базы данных](image/10.png)
+
+Проведена проверка структуры созданной таблицы и выполнен тестовый запрос для отображения содержимого.
+
+![Проверка структуры таблицы](image/11.png)
+
+## Резервные копии
+
+Создан каталог для хранения резервных копий баз данных и выполнено резервное копирование базы addressbook в различных форматах.
+
+![Создание резервных копий](image/12.png)
+
+Проведено тестирование процедуры восстановления базы данных из созданных резервных копий для подтверждения их работоспособности.
+
+## Внесение изменений в настройки внутреннего окружения
+
+Все конфигурационные файлы и резервные копии скопированы в соответствующие подкаталоги провижининга виртуальной машины.
+
+Разработан shell-скрипт для автоматической установки и настройки MariaDB, включающий процедуры безопасности и восстановления базы данных.
+
+![Создание скрипта автоматизации](image/13.png)
+
+Скрипт интегрирован в конфигурацию Vagrant для автоматического выполнения при развёртывании виртуальной машины.
+
+![Интеграция с Vagrant](image/14.png)
+
+# Контрольные вопросы
+
+1. **Какая команда отвечает за настройки безопасности в MariaDB?**  
+   Команда `mysql_secure_installation` выполняет начальную настройку безопасности.
+
+2. **Как настроить MariaDB для доступа через сеть?**  
+   Необходимо настроить параметр `bind-address` в конфигурационных файлах и открыть порт 3306 в firewall.
+
+3. **Какая команда позволяет получить обзор доступных баз данных?**  
+   Команда `SHOW DATABASES;` в интерактивной оболочке MariaDB.
+
+4. **Какая команда позволяет узнать, какие таблицы доступны в базе данных?**  
+   Команда `SHOW TABLES;` после выбора базы данных.
+
+5. **Какая команда позволяет узнать, какие поля доступны в таблице?**  
+   Команда `DESCRIBE table_name;` или `SHOW COLUMNS FROM table_name;`
+
+6. **Какая команда позволяет узнать, какие записи доступны в таблице?**  
+   Команда `SELECT * FROM table_name;`
+
+7. **Как удалить запись из таблицы?**  
+   Команда `DELETE FROM table_name WHERE condition;`
+
+8. **Где расположены файлы конфигурации MariaDB?**  
+   Основные конфигурационные файлы находятся в `/etc/my.cnf` и `/etc/my.cnf.d/`
+
+9. **Где располагаются файлы с базами данных MariaDB?**  
+   Файлы баз данных обычно находятся в `/var/lib/mysql/`
+
+10. **Как сделать резервную копию базы данных и восстановить её?**  
+    Резервное копирование: `mysqldump -u user -p database > backup.sql`  
+    Восстановление: `mysql -u user -p database < backup.sql`
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+В ходе лабораторной работы были успешно освоены методы установки и настройки системы управления базами данных MariaDB. Настроена кодировка UTF-8, создана тестовая база данных с таблицами, реализованы процедуры резервного копирования и восстановления, а также автоматизирован процесс развёртывания с использованием Vagrant. Полученные навыки позволяют эффективно управлять реляционными базами данных в операционной системе Linux.
