--- a/labs/lab06/presentation/net-os-admin--lab06--presentation.qmd
+++ b/labs/lab06/presentation/net-os-admin--lab06--presentation.qmd
@@ -1,200 +1,98 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №6"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Установка и настройка системы управления базами данных MariaDB"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение практических навыков по установке и конфигурированию системы управления базами данных MariaDB
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Установка и настройка MariaDB
+- Создание тестовой базы данных
+- Настройка резервного копирования
+- Автоматизация развёртывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Установка MariaDB
 
-:::
-::: {.column width="30%"}
+**Начальная установка:**
+- Установка пакетов mariadb и mariadb-server
+- Анализ конфигурационных файлов
+- Запуск и активация службы
 
-![](./image/kulyabov.jpg)
+![Установка MariaDB](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Настройка безопасности
 
-# Вводная часть
+**Безопасность базы данных:**
+- Запуск mysql_secure_installation
+- Установка пароля root пользователя
+- Удаление тестовых баз и анонимных пользователей
 
-## Актуальность
+![Настройка безопасности MariaDB](image/4.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Конфигурация кодировки
 
-## Объект и предмет исследования
+**Настройка UTF-8:**
+- Создание конфигурационного файла utf8.cnf
+- Установка кодировки по умолчанию
+- Перезапуск службы для применения изменений
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Создание конфигурации UTF-8](image/6.png){width=70%}
 
-## Цели и задачи
+# Создание базы данных
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Создание тестовой базы:**
+- Создание базы данных addressbook
+- Настройка кодировки UTF-8
+- Создание таблицы city с полями name и city
 
-## Материалы и методы
+![Создание базы данных addressbook](image/8.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Работа с данными
 
-# Создание презентации
+**Заполнение таблицы:**
+- Добавление тестовых записей в таблицу
+- Проверка структуры таблицы
+- Выполнение тестовых запросов
 
-## Процессор `pandoc`
+![Создание и заполнение таблицы city](image/9.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Управление пользователями
 
-## Формат `pdf`
+**Создание пользователя:**
+- Создание пользователя с ограниченными правами
+- Назначение привилегий для работы с базой
+- Обновление прав доступа
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Создание пользователя базы данных](image/10.png){width=70%}
 
-## Код для формата `pdf`
+# Резервное копирование
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Создание бэкапов:**
+- Создание каталога для резервных копий
+- Резервное копирование в различных форматах
+- Сжатие резервных копий
 
-## Формат `html`
+![Создание резервных копий](image/12.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Автоматизация
 
-## Код для формата `html`
+**Скрипт развёртывания:**
+- Копирование конфигурационных файлов
+- Создание shell-скрипта для автоматизации
+- Интеграция с Vagrant
 
-- Тема задаётся в файле `Makefile`
+![Создание скрипта автоматизации](image/13.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Выводы
 
-## Получающиеся форматы
-
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
-
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоена установка и настройка MariaDB
+- Создана тестовая база данных с таблицами
+- Настроено резервное копирование и восстановление
+- Реализована автоматизация развёртывания
